--- a/content/posts/2019-08-29-fp-ts.md
+++ b/content/posts/2019-08-29-fp-ts.md
@@ -156,7 +156,7 @@ export function tryCatch<E, A>(
 }
 ```
 
-Here [Lazy<A>](https://github.com/gcanti/fp-ts/blob/master/src/function.ts#L6) is simply a synonym for a thunk returning an `A`:
+Here [`Lazy<A>`](https://github.com/gcanti/fp-ts/blob/master/src/function.ts#L6) is simply a synonym for a thunk returning an `A`:
 
 ```typescript
 // fp-ts/lib/function.ts
