--- a/content/posts/2019-08-29-fp-ts.md
+++ b/content/posts/2019-08-29-fp-ts.md
@@ -4,7 +4,7 @@ published: true
 date: "2019-08-29"
 path: /blog/using-fp-ts-for-http-requests-and-validation
 slug: using-fp-ts-for-http-requests-and-validation
-description: How to use TaskEither, flow and pipe for smooth pipelines
+description: How to use TaskEither, flow and pipe for smooth pipelines.
 tags: functional, typescript, fp-ts
 ---
 
